585 sed -i doesn't work on FAT filesystems Reviewed by: deano@cloudpixies.com Reviewed by: trisk@nexenta.com Approved by: trisk@nexenta.com